@@ -1,4 +1,5 @@
 # Version 0.5.0
+- [#581] User can now filter input lists by keyword in function wizard.
 - [#24] User can now add labels with different information on the detail
 - [#505] New installer script based on Inno Setup 5.
 - Size of preferences dialog in both Valentina and Tape app is now preserved between sessions
